# cloud-migration-factory-on-aws

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE.txt  README.md  solution-manifest.yaml
source/backend/lambda_layers/lambda_layer_policy/python/: policy.py  pyproject.toml  requirements.txt
source/backend/lambda_layers/lambda_layer_py_pkgs/python/: pyproject.toml  requirements.txt
source/backend/lambda_unit_test/: common_utils.py  pyproject.toml  requirements.txt  test_cmf_pipeline.py  test_common_utils.py  test_drawio_parser.py  test_helper.py  test_item_validation.py  test_lamba_cognito_base.py  test_lambda_auth.py  test_lambda_build.py  test_lambda_cognito_base.py  test_lambda_cognito_group_update.py  test_lambda_cognito_user_update.py  test_lambda_cognitogroups.py  test_lambda_defaultschema.py  test_lambda_email_notification.py  test_lambda_export_pipeline_templates.py  test_lambda_gfbuild.py  test_lambda_gfcommon.py  test_lambda_gfdeploy.py  test_lambda_gfvalidation.py  test_lambda_import_pipeline_templates.py  test_lambda_item.py  test_lambda_item_common.py  test_lambda_items.py  test_lambda_login.py  test_lambda_login_common.py  test_lambda_migrationtracker_glue_base.py  test_lambda_migrationtracker_glue_execute.py  test_lambda_migrationtracker_glue_scriptcopy.py  test_lambda_notifications.py  test_lambda_pipeline_stream.py  test_lambda_pipeline_task_execution_output.py  test_lambda_policy.py  test_lambda_policy_attr.py  test_lambda_replatformec2schema.py  test_lambda_reset.py  test_lambda_role.py  test_lambda_role_item.py  (+18 more)
source/backend/lambda_unit_test/sample_data/: CFN_Template_1_Wordpress.yaml  CFN_Template_2_OFBiz.yaml  Migration_Tracker_All_Extract_Script.py  apps.json  connection_ids.json  jwtRS256.key  jwtRS256.key.pub  pipeline_template_tasks.json  pipeline_templates.json  pipeline_templates_import.json  pipelines.json  policies.json  roles.json  schema_server_replatform_create_ec2.json  schema_server_replatform_create_server.json  schema_server_replatform_create_server_attrs.json  schema_server_replatform_update_server.json  schemas.json  schemas_modified_TS.json  schemas_no_app.json  schemas_no_server.json  schemas_no_wave.json  schemas_server_replatform_with_attrs.json  servers.json  ssm_jobs.json  ssm_scripts.json  ssm_socket_cognito_jwks.json  ssm_socket_cognito_jwks_error.json  tasks.json  waves.json
source/backend/lambda_unit_test/sample_data/ssm_load_scripts/: README.md  sample_ssm_script_2.json
source/backend/lambda_unit_test/sample_data/ssm_load_scripts/package_incorrect_compute_yaml_contents/: Package-Structure.yml
source/integrations/integration_unit_tests/: FactoryEndpoints.json  __init__.py  pyproject.toml  requirements.txt  test_credential_manager.py  test_credential_manager_base.py  test_credential_manager_exceptions.py  test_credential_manager_lambda_handler.py  test_util.py  tox.ini
source/integrations/integration_unit_tests/automation_packages/ads/: test_ADS_AgentInstall.py  test_ADS_AgentUninstall.py  test_ADS_InstallLinux.py  test_ads_common.py
source/integrations/integration_unit_tests/common/: test_cmf_get_credentials.py  test_cmf_get_servers.py  test_cmf_user_login.py  test_get_factory_databases.py  test_mfcommon.py  test_mfcommon_util.py
source/integrations/integration_unit_tests/credential_manager/: test_credential_manager.py  test_credential_manager_base.py  test_credential_manager_exceptions.py  test_credential_manager_lambda_handler.py
source/integrations/integration_unit_tests/mgh/: __init__.py  test_lambda_mgh.py  test_lambda_mgh_common_util.py
source/integrations/integration_unit_tests/mgn/: test_0_prerequisites_checks.py  test_1_FileCopy.py  test_2_AddUser.py  test_2_RemoveUser.py  test_2_Verify_replication.py  test_3_Shutdown_all_servers.py  test_3_Verify_instance_status.py  test_4_Get_instance_IP.py  test_4_Verify_server_connection.py  test_5_post_cutover_validations.py  test_AgentInstall.py  test_InstallLinux.py  test_lambda_mgn.py  test_lambda_mgn_common_util.py  test_lambda_mgn_template.py  test_lambda_mgn_utils.py  test_mgn_common.py
(+749 files in other folders)
