[tool.poetry]
name = "cloud-migration-factory-on-aws"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
urllib3 = ">2.2.2"
requests = "==2.32.3"
simplejson = "==3.19.2"
boto3 = "^1.35.46"
botocore = "^1.35.46"
moto = "==5.0.10"
coverage = "==7.5.4"
troposphere = "==4.8.1"
PyYAML = "==6.0.1"
pyparsing = "==3.1.2"
docker = "==7.1.0"
aws-lambda-powertools = {extras = ["aws-sdk"], version = "~=2.40.1"}
PyJWT = {extras = ["crypto"], version = "2.8.0"}
joserfc = "~=0.12.0"
mypy-boto3-dynamodb = ">=1.35.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"