[tool.poetry]
name = "cloud-migration-factory-on-aws"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
urllib3 = ">=2.3.0"
requests = "==2.32.3"
simplejson = "==3.20.1"
boto3 = "^1.37.6"
botocore = "^1.37.6"
moto = "==5.1.1"
coverage = "==7.6.12"
troposphere = "==4.9.0"
PyYAML = "==6.0.2"
pyparsing = "==3.2.1"
docker = "==7.1.0"
aws-lambda-powertools = {extras = ["aws-sdk"], version = ">=3.7.0"}
PyJWT = {extras = ["crypto"], version = "2.10.1"}
joserfc = "~=1.0.4"
mypy-boto3-dynamodb = ">=1.37.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"