[tool.poetry]
name = "cloud-migration-factory-on-aws"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
urllib3 = ">2.2.2"
boto3 = "^1.35.46"
botocore = "^1.35.46"
moto = "^5.0.11"
coverage = "^7.3.0"
freezegun = "^1.2.2"
joserfc = "^0.9.0"
paramiko = "^3.4.0"
polling2 = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"