[tool.poetry]
name = "cloud-migration-factory-on-aws"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
urllib3 = ">=2.3.0"
boto3 = "^1.37.6"
botocore = "^1.37.6"
moto = "^5.1.1"
coverage = "^7.6.12"
freezegun = "^1.5.1"
joserfc = "~=1.0.4"
paramiko = "^3.5.1"
polling2 = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"