[tool.poetry]
name = "cloud-migration-factory-on-aws"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
urllib3 = ">2.2.2"
requests = "==2.32.3"
PyJWT = {extras = ["crypto"], version = "2.8.0"}
simplejson = "==3.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"