[tool.poetry]
name = "cloud-migration-factory-on-aws"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
urllib3 = ">=2.3.0"
requests = "==2.32.3"
PyJWT = {extras = ["crypto"], version = "2.10.1"}
simplejson = "==3.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"