[tool.poetry]
name = "cloud-migration-factory-on-aws"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
urllib3 = ">=2.2.2"
requests = "==2.32.3"
simplejson = "==3.19.2"
boto3 = "^1.35.46"
botocore = "^1.35.46"
aws-lambda-powertools = "~=2.40.1"
mypy-boto3-dynamodb = ">=1.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"