[tool.poetry]
name = "cloud-migration-factory-on-aws"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
urllib3 = ">=2.3.0"
requests = "==2.32.3"
simplejson = "==3.20.1"
boto3 = "^1.37.6"
botocore = "^1.37.6"
aws-lambda-powertools = ">=3.7.0"
mypy-boto3-dynamodb = ">=1.37.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"